tests/type-errors/no_container_subset_arg.arl
archetype no_container_subset_arg

asset et identified by cid { cid: int; }

asset e identified by eid {
	eid			: string;
	cells		: et subset;
}

entry start (cl: et subset) {
	effect {
		()
	}
}
